--- a/boxio/styles.css
+++ b/boxio/styles.css
@@ -1,6 +1,6 @@
 body {
-    background: #EA8C29;
-    font-family: ubuntu;
+    background: #8fd0ca;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     /*
         #eab0dc
     */
@@ -15,11 +15,11 @@ h1{
 }
 
 .content{
-    background: #fff;
+    background: white;
     max-width: 960px;
     margin: 30px auto;
     padding:  20px 30px;
-    border-radius: 10px 120px 10px 10px;
+    border-radius: 10px 100px 10px 10px;
     box-shadow: 1px 3px 5px rgba(0,0,0,0.1)
 }
 
@@ -30,17 +30,17 @@ ul{
 
 li{
     padding: 20px;
-    background: #f6f6f6;
+    background: white;
     font-size: 20px;
-    color: #555;
+    color: black;
     position: relative;
-    border-bottom: 1px solid #e6e6e6;
+    border: .5px solid #e6e6e6;
     height: 46px;
 }
 
 li:nth-child(even){
     padding: 20px;
-    background: #f2f2f2;
+    background: white;
 }
 
 li span{
@@ -64,6 +64,9 @@ li div{
     font-weight:  bold;
     cursor:  pointer;
 }
+
+
+
 
 .button1 {
     display: inline-flex;
