--- a/boxio/css/styles.css
+++ b/boxio/css/styles.css
@@ -1,6 +1,7 @@
 body {
     background: #8fd0ca;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", 
+    Helvetica, Arial, "Lucida Grande", sans-serif;
     /*
         #eab0dc
     */
@@ -20,7 +21,6 @@ h1{
     margin: 30px auto;
     padding:  20px 30px;
     border-radius: 20px 20px 20px 20px;
-    box-shadow: 1px 3px 5px rgba(0,0,0,0.1)
 }
 
 ul{
@@ -119,13 +119,13 @@ li div{
     text-decoration: none;
     outline: none;
     color: #fff;
-    background-color:#33B3FF;
+    background-color:#FFBF00;
     border: none;
     border-radius: 12px;
     box-shadow: 0 5px #999;
 }
 .button3:active{
-    background-color: #3382FF;
+    background-color:#FFBF00;
     box-shadow: 0 2px #666;
     transform: translateY(4px);
 }
