--- a/boxio/css/styles.css
+++ b/boxio/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: #8fd0ca;
+    background: #7B96B4;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", 
     Helvetica, Arial, "Lucida Grande", sans-serif;
     /*
@@ -130,36 +130,5 @@ li div{
     transform: translateY(4px);
 }
 
-.enterbtn{
-    display: inline-flex;
-    padding: 15px 25px;
-    font-size: 24px;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    color: #fff;
-    background-color: #33B3FF;
-    border: none;
-    border-radius: 12px;
-    box-shadow: 0 5px #999;
-}
 
-.subname {
-    font-size: 24px;
-    text-decoration: none;
-    color: #fff;
-}
-.subpass {
-    font-size: 24px;
-    text-decoration: none;
-    color: #fff;
-}
 
-.loginform{
-    border: none;
-}
-
-.loginfield {
-    border: none;
-}
