--- a/boxio/css/index.css
+++ b/boxio/css/index.css
@@ -31,8 +31,7 @@ img{
   form {
     position: relative;
     display: inline-block;
-    max-width: 700px;
-    min-width: 500px;
+    width: 500px;
     box-sizing: border-box;
     padding: 30px 25px;
     background-color: white;
@@ -44,6 +43,13 @@ img{
     -webkit-transform: translate(-50%, 0);
     transform: translate(-50%, 0);
   }
+  /* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  form{
+    width: 400px;
+  }
+}
+
   
 
   form button {
