--- a/boxio/css/index.css
+++ b/boxio/css/index.css
@@ -3,8 +3,8 @@ h1{
     font-size: 50px;
     letter-spacing: 2px;
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 0px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 fieldset{
@@ -28,7 +28,7 @@ img{
     transition: all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);
   }
 
-  section{
+  .content{
     display: flex;
     max-width: 500px;
     justify-content: center;
