--- a/boxio/css/styles.css
+++ b/boxio/css/styles.css
@@ -134,3 +134,76 @@ li div{
 
 
 
+.enterbtn {
+    display: inline-flex;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #33B3FF;
+    border: none;
+    border-radius: 12px;
+    box-shadow: 0 5px #999;
+}
+
+.subname {
+    font-size: 24px;
+    text-decoration: none;
+    color: #fff;
+}
+
+.subpass {
+    font-size: 24px;
+    text-decoration: none;
+    color: #fff;
+}
+
+.loginform {
+    border: none;
+}
+
+.loginfield {
+    border: none;
+}
+
+.highcharts-figure, .highcharts-data-table table {
+    min-width: 320px;
+    max-width: 660px;
+    margin: 1em auto;
+}
+
+.highcharts-data-table table {
+    font-family: Verdana, sans-serif;
+    border-collapse: collapse;
+    border: 1px solid #EBEBEB;
+    margin: 10px auto;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+}
+
+.highcharts-data-table caption {
+    padding: 1em 0;
+    font-size: 1.2em;
+    color: #555;
+}
+
+.highcharts-data-table th {
+    font-weight: 600;
+    padding: 0.5em;
+}
+
+.highcharts-data-table td, .highcharts-data-table th, .highcharts-data-table caption {
+    padding: 0.5em;
+}
+
+.highcharts-data-table thead tr, .highcharts-data-table tr:nth-child(even) {
+    background: #f8f8f8;
+}
+
+.highcharts-data-table tr:hover {
+    background: #f1f7ff;
+}
