--- a/boxio/css/student.css
+++ b/boxio/css/student.css
@@ -71,6 +71,29 @@ h1{
 }
 
 
+button{
+    border: none;
+    background-color:#fff;
+    cursor:pointer;
+    font-size: 30px;
+    border-radius: 10px;
+    width: 10%;
+    height: 150px;
+    margin: 100px 0px;
+    padding: 0px 10px;
+    transition: all 0.4s ease 0s;
+}
+
+button:hover{
+    background-color: #fff;
+    color: #000000;
+    transition: all 0.4s ease 0s;
+}
+.btn {
+    background-color:#E4CCA0;
+}
+
+
 
 @media (min-width: 320px) and (max-width: 480px) {
     .content{
@@ -93,5 +116,17 @@ h1{
         width: 100%;
         justify-content:  center;
         margin-bottom: 20px;
+    }
+    button{
+        border: none;
+        background-color:#fff;
+        cursor:pointer;
+        font-size: 10px;
+        border-radius: 10px;
+        width: 10%;
+        height: 50px;
+        margin: 10px 0px;
+        padding: 0px 10px;
+        transition: all 0.4s ease 0s;
     }
 }
